fix specific amount spacing to 40px margin-top, add nbsp for alternative amounts to force amount and currency denomination always on same line

--- a/src/sass/views/tab-receive.scss
+++ b/src/sass/views/tab-receive.scss
@@ -11,7 +11,7 @@
     }
   }
   .button-request {
-    margin-top: 15px;
+    margin-top: 40px;
     background: transparent;
     border: none;
     font-size: 100%;
